Fixes alignright issue

--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,7 @@
 /*!
  * Theme name: Mrktr
  * Github Theme URI: https://github.com/jiteshp/mrktr
- * Version: 1.0.3
+ * Version: 1.0.4
  * Author: Jitesh Patil <jitesh.patil@gmail.com>
  * Author URI: https://jiteshpatil.com/
  * License: GPL3+
@@ -138,7 +138,7 @@
 	margin: 0 @base-line-height @base-line-height 0;
 }
 
-.alignleft {
+.alignright {
 	display: inline;
 	float: right;
 	margin: 0 0 @base-line-height @base-line-height;
